--- a/secio/Cargo.toml
+++ b/secio/Cargo.toml
@@ -17,8 +17,8 @@ no-default-features = true
 
 [dependencies]
 bytes = "0.4"
-futures = "0.1"
-tokio = "0.1"
+futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
+tokio = "0.2.0-alpha.2"
 log = "0.4.1"
 
 flatbuffers = { version = "0.6.0", optional = true }
