--- a/protocols/discovery/Cargo.toml
+++ b/protocols/discovery/Cargo.toml
@@ -18,8 +18,8 @@ no-default-features = true
 p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
 bytes = "0.4"
 byteorder = "1.2"
-futures = "0.1"
-tokio = "0.1"
+futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
+tokio = "0.2.0-alpha.3"
 log = "0.4"
 rand = "0.6.1"
 flatbuffers = { version = "0.6.0", optional = true }
@@ -28,8 +28,6 @@ molecule = { version = "0.4.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.6"
-futures = "0.1"
-tokio = "0.1"
 
 [features]
 default = []
