--- a/protocols/ping/Cargo.toml
+++ b/protocols/ping/Cargo.toml
@@ -19,15 +19,13 @@ p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
 log = "0.4"
 flatbuffers = { version = "0.6.0", optional = true }
 flatbuffers-verifier = { version = "0.2.0", optional = true }
-generic-channel = "0.2.0"
+futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
 bytes = "0.4"
 molecule = { version = "0.4.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.6.0"
-futures = "0.1"
-generic-channel = { version = "0.2.0", features = ["all"] }
-tokio = "0.1"
+tokio = "0.2.0-alpha.3"
 
 [features]
 default = []
