--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ no-default-features = true
 yamux = { path = "yamux", version = "0.1.14", package = "tokio-yamux" }
 secio = { path = "secio", version = "0.2.0", package = "tentacle-secio" }
 
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
-tokio = "0.2.0-alpha.3"
+futures = { version = "0.3.0" }
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
+tokio-util = { version = "0.2.0", features = ["codec"] }
 log = "0.4"
-bytes = "0.4"
-tokio-executor = { version = "0.2.0-alpha.3", features = ["threadpool"] }
+bytes = "0.5.0"
 
 flatbuffers = { version = "0.6.0", optional = true }
 flatbuffers-verifier = { version = "0.2.0", optional = true }
