--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -14,11 +14,12 @@ path = "./src/main.rs"
 [dependencies]
 p2p = { path = "..", package = "tentacle" }
 rand = "0.6.1"
-tokio = "0.2.0-alpha.3"
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
+futures = { version = "0.3.0" }
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
+tokio-util = { version = "0.2.0", features = ["codec"] }
 crossbeam-channel = "0.3.6"
 env_logger = "0.6.0"
-bytes = "0.4"
+bytes = "0.5.0"
 
 [features]
 default = []
