--- a/protocols/discovery/Cargo.toml
+++ b/protocols/discovery/Cargo.toml
@@ -16,10 +16,10 @@ no-default-features = true
 
 [dependencies]
 p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
-bytes = "0.4"
-byteorder = "1.2"
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
-tokio = "0.2.0-alpha.3"
+bytes = "0.5.0"
+futures = { version = "0.3.0" }
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "stream"] }
+tokio-util = { version = "0.2.0", features = ["codec"] }
 log = "0.4"
 rand = "0.6.1"
 flatbuffers = { version = "0.6.0", optional = true }
