--- a/protocols/identify/Cargo.toml
+++ b/protocols/identify/Cargo.toml
@@ -16,7 +16,7 @@ no-default-features = true
 
 [dependencies]
 p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
-bytes = "0.4"
+bytes = "0.5.0"
 flatbuffers = { version = "0.6.0", optional = true }
 flatbuffers-verifier = { version = "0.2.0", optional = true }
 log = "0.4"
@@ -24,8 +24,8 @@ molecule = { version = "0.4.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.6.0"
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
-tokio = "0.2.0-alpha.3"
+futures = { version = "0.3.0" }
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
 
 [features]
 default = []
