--- a/protocols/ping/Cargo.toml
+++ b/protocols/ping/Cargo.toml
@@ -19,13 +19,13 @@ p2p = { path = "../..", version = "0.2.6", package = "tentacle" }
 log = "0.4"
 flatbuffers = { version = "0.6.0", optional = true }
 flatbuffers-verifier = { version = "0.2.0", optional = true }
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
-bytes = "0.4"
+futures = { version = "0.3.0" }
+bytes = "0.5.0"
 molecule = { version = "0.4.0", optional = true }
 
 [dev-dependencies]
 env_logger = "0.6.0"
-tokio = "0.2.0-alpha.3"
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns", "rt-threaded", "blocking"] }
 
 [features]
 default = []
