--- a/secio/Cargo.toml
+++ b/secio/Cargo.toml
@@ -16,9 +16,10 @@ all-features = false
 no-default-features = true
 
 [dependencies]
-bytes = "0.4"
-futures = { version = "0.3.0-alpha.18", package = "futures-preview" }
-tokio = "0.2.0-alpha.3"
+bytes = "0.5"
+futures = { version = "0.3.0" }
+tokio = { version = "0.2.0", features = ["time", "io-util", "tcp", "dns"] }
+tokio-util = { version = "0.2.0", features = ["codec"] }
 log = "0.4.1"
 
 flatbuffers = { version = "0.6.0", optional = true }
