--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,10 @@ molecule = { version = "0.6.0", optional = true }
 # upnp
 igd = "0.9"
 
+# metrics
+prometheus = { git = "https://github.com/tikv/rust-prometheus.git", rev = "fd122caa03", optional = true }
+lazy_static = "1.4"
+
 [target.'cfg(unix)'.dependencies.libc]
 version = "0.2"
 
@@ -57,6 +61,7 @@ default = []
 flatc = [ "flatbuffers", "flatbuffers-verifier", "secio/flatc" ]
 # use molecule to handshake
 molc = [ "molecule", "secio/molc" ]
+metrics = [ "prometheus" ]
 
 [workspace]
 members = [
